...
    <string name="reverse_recent">Least Recent</string>
    <string name="sorting_menu_desc">Opens menu for sorting options</string>
    <string name="unexpected_exception">Unexpected error.</string>
    <string name="signUp_wrong_email">If the email is incorrect:</string>
    <string name="cropping_error">Error cropping the image!</string>
    <string name="retrieval_error">Error retrieving the data!</string>
    <string name="selected_chip">Selected option</string>
    <string name="refresh">Refresh</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_delete_account">Are you sure you want to delete your account? It is irreversible!</string>
    <string name="confirm_delete_character">Are you sure you want to delete this character? It is irreversible!</string>
    <string name="confirm_delete_story">Are you sure you want to delete this story? It is irreversible!</string>
...
